--- a/q/249343.html
+++ b/q/249343.html
@@ -26,31 +26,40 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>011</td><td>Jelly</td><td>231230T081641Z</td><td><a href="https://codegolf.stackexchange.com/questions/249343/bloons-td-6-upgrade-paths/268869#268869">Nick Ken</a></td></tr>
-<tr d-ix="1"><td>135</td><td>Python 3</td><td>220630T193318Z</td><td><a href="https://codegolf.stackexchange.com/questions/249343/bloons-td-6-upgrade-paths/249356#249356">Fmbalbue</a></td></tr>
-<tr d-ix="2"><td>064</td><td>Regenerate a</td><td>220711T010709Z</td><td><a href="https://codegolf.stackexchange.com/questions/249343/bloons-td-6-upgrade-paths/249779#249779">thejonym</a></td></tr>
-<tr d-ix="3"><td>071</td><td>Python</td><td>220710T215123Z</td><td><a href="https://codegolf.stackexchange.com/questions/249343/bloons-td-6-upgrade-paths/249773#249773">Lynn</a></td></tr>
-<tr d-ix="4"><td>271</td><td>Batch</td><td>220710T210052Z</td><td><a href="https://codegolf.stackexchange.com/questions/249343/bloons-td-6-upgrade-paths/249771#249771">Youserna</a></td></tr>
-<tr d-ix="5"><td>075</td><td>Python 3</td><td>220704T062213Z</td><td><a href="https://codegolf.stackexchange.com/questions/249343/bloons-td-6-upgrade-paths/249509#249509">the defa</a></td></tr>
-<tr d-ix="6"><td>012</td><td>Pyth</td><td>220701T153443Z</td><td><a href="https://codegolf.stackexchange.com/questions/249343/bloons-td-6-upgrade-paths/249395#249395">math jun</a></td></tr>
-<tr d-ix="7"><td>080</td><td>Python 2</td><td>220630T190413Z</td><td><a href="https://codegolf.stackexchange.com/questions/249343/bloons-td-6-upgrade-paths/249354#249354">Kevin Cr</a></td></tr>
-<tr d-ix="8"><td>067</td><td>JavaScript V8</td><td>220630T174857Z</td><td><a href="https://codegolf.stackexchange.com/questions/249343/bloons-td-6-upgrade-paths/249345#249345">Arnauld</a></td></tr>
-<tr d-ix="9"><td>018</td><td>K ngn/k</td><td>220630T180442Z</td><td><a href="https://codegolf.stackexchange.com/questions/249343/bloons-td-6-upgrade-paths/249346#249346">ovs</a></td></tr>
-<tr d-ix="10"><td>106</td><td>Rust</td><td>220701T092135Z</td><td><a href="https://codegolf.stackexchange.com/questions/249343/bloons-td-6-upgrade-paths/249378#249378">mousetai</a></td></tr>
-<tr d-ix="11"><td>062</td><td>Ruby</td><td>220701T055622Z</td><td><a href="https://codegolf.stackexchange.com/questions/249343/bloons-td-6-upgrade-paths/249372#249372">G B</a></td></tr>
-<tr d-ix="12"><td>026</td><td>Charcoal</td><td>220701T001336Z</td><td><a href="https://codegolf.stackexchange.com/questions/249343/bloons-td-6-upgrade-paths/249363#249363">Neil</a></td></tr>
-<tr d-ix="13"><td>050</td><td>Retina 0.8.2</td><td>220701T000203Z</td><td><a href="https://codegolf.stackexchange.com/questions/249343/bloons-td-6-upgrade-paths/249362#249362">Neil</a></td></tr>
-<tr d-ix="14"><td>058</td><td>Factor + math.combinatorics</td><td>220630T181940Z</td><td><a href="https://codegolf.stackexchange.com/questions/249343/bloons-td-6-upgrade-paths/249349#249349">chunes</a></td></tr>
-<tr d-ix="15"><td>010</td><td>Husk</td><td>220630T211049Z</td><td><a href="https://codegolf.stackexchange.com/questions/249343/bloons-td-6-upgrade-paths/249359#249359">ovs</a></td></tr>
-<tr d-ix="16"><td>011</td><td>05AB1E</td><td>220630T180515Z</td><td><a href="https://codegolf.stackexchange.com/questions/249343/bloons-td-6-upgrade-paths/249347#249347">Kevin Cr</a></td></tr>
+<tr d-ix="0"><td>825</td><td>Vyxal</td><td>240905T144253Z</td><td><a href="https://codegolf.stackexchange.com/questions/249343/bloons-td-6-upgrade-paths/275372#275372">pacman25</a></td></tr>
+<tr d-ix="1"><td>011</td><td>Jelly</td><td>231230T081641Z</td><td><a href="https://codegolf.stackexchange.com/questions/249343/bloons-td-6-upgrade-paths/268869#268869">Nick Ken</a></td></tr>
+<tr d-ix="2"><td>135</td><td>Python 3</td><td>220630T193318Z</td><td><a href="https://codegolf.stackexchange.com/questions/249343/bloons-td-6-upgrade-paths/249356#249356">Fmbalbue</a></td></tr>
+<tr d-ix="3"><td>064</td><td>Regenerate a</td><td>220711T010709Z</td><td><a href="https://codegolf.stackexchange.com/questions/249343/bloons-td-6-upgrade-paths/249779#249779">thejonym</a></td></tr>
+<tr d-ix="4"><td>071</td><td>Python</td><td>220710T215123Z</td><td><a href="https://codegolf.stackexchange.com/questions/249343/bloons-td-6-upgrade-paths/249773#249773">lynn</a></td></tr>
+<tr d-ix="5"><td>271</td><td>Batch</td><td>220710T210052Z</td><td><a href="https://codegolf.stackexchange.com/questions/249343/bloons-td-6-upgrade-paths/249771#249771">Youserna</a></td></tr>
+<tr d-ix="6"><td>075</td><td>Python 3</td><td>220704T062213Z</td><td><a href="https://codegolf.stackexchange.com/questions/249343/bloons-td-6-upgrade-paths/249509#249509">the defa</a></td></tr>
+<tr d-ix="7"><td>012</td><td>Pyth</td><td>220701T153443Z</td><td><a href="https://codegolf.stackexchange.com/questions/249343/bloons-td-6-upgrade-paths/249395#249395">math jun</a></td></tr>
+<tr d-ix="8"><td>080</td><td>Python 2</td><td>220630T190413Z</td><td><a href="https://codegolf.stackexchange.com/questions/249343/bloons-td-6-upgrade-paths/249354#249354">Kevin Cr</a></td></tr>
+<tr d-ix="9"><td>067</td><td>JavaScript V8</td><td>220630T174857Z</td><td><a href="https://codegolf.stackexchange.com/questions/249343/bloons-td-6-upgrade-paths/249345#249345">Arnauld</a></td></tr>
+<tr d-ix="10"><td>018</td><td>K ngn/k</td><td>220630T180442Z</td><td><a href="https://codegolf.stackexchange.com/questions/249343/bloons-td-6-upgrade-paths/249346#249346">ovs</a></td></tr>
+<tr d-ix="11"><td>106</td><td>Rust</td><td>220701T092135Z</td><td><a href="https://codegolf.stackexchange.com/questions/249343/bloons-td-6-upgrade-paths/249378#249378">mousetai</a></td></tr>
+<tr d-ix="12"><td>062</td><td>Ruby</td><td>220701T055622Z</td><td><a href="https://codegolf.stackexchange.com/questions/249343/bloons-td-6-upgrade-paths/249372#249372">G B</a></td></tr>
+<tr d-ix="13"><td>026</td><td>Charcoal</td><td>220701T001336Z</td><td><a href="https://codegolf.stackexchange.com/questions/249343/bloons-td-6-upgrade-paths/249363#249363">Neil</a></td></tr>
+<tr d-ix="14"><td>050</td><td>Retina 0.8.2</td><td>220701T000203Z</td><td><a href="https://codegolf.stackexchange.com/questions/249343/bloons-td-6-upgrade-paths/249362#249362">Neil</a></td></tr>
+<tr d-ix="15"><td>058</td><td>Factor + math.combinatorics</td><td>220630T181940Z</td><td><a href="https://codegolf.stackexchange.com/questions/249343/bloons-td-6-upgrade-paths/249349#249349">chunes</a></td></tr>
+<tr d-ix="16"><td>010</td><td>Husk</td><td>220630T211049Z</td><td><a href="https://codegolf.stackexchange.com/questions/249343/bloons-td-6-upgrade-paths/249359#249359">ovs</a></td></tr>
+<tr d-ix="17"><td>011</td><td>05AB1E</td><td>220630T180515Z</td><td><a href="https://codegolf.stackexchange.com/questions/249343/bloons-td-6-upgrade-paths/249347#249347">Kevin Cr</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 11 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 66 <a href="https://github.com/Vyxal/Vyncode/blob/main/README.md" rel="nofollow noreferrer">bits<sup>v2</a></sup>, 8.25 bytes</h1>
+<pre><code>⁺ŀfʀΠvṖÞfU
+</code></pre>
+<p><a href="https://vyxal.pythonanywhere.com/?v=2&amp;c=1#WyJQPSIsIiIsIuKBusWAZsqAzqB24bmWw55mVSIsIiIsIiJd" rel="nofollow noreferrer">Try it Online!</a></p>
+<p>Bitstring:</p>
+<pre><code>111111011001001101001110100101101000111101101011000011001000110100
+</code></pre>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 11 bytes</h1>
 <pre><code>6p3’Ż€Œ!€ẎQ
 </code></pre>
 <p><a href="https://tio.run/##y0rNyan8/9@swPhRw8yjux81rTk6SRFIPtzVF/j/PwA" rel="nofollow noreferrer" title="Jelly – Try It Online">Try it online!</a></p>
 <p>A niladic link that returns the 64 triples. This is <a href="https://codegolf.stackexchange.com/a/268857/42248">my answer to the follow-up question</a> but with the sorting code removed.</p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, <s>161</s> <s>146</s> <s>141</s> 135 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, <s>161</s> <s>146</s> <s>141</s> 135 bytes</h1>
 
 <pre class="lang-python prettyprint-override"><code>from itertools import*
 for u in product(*[range(6)]*3):
@@ -61,29 +70,29 @@ for u in product(*[range(6)]*3):
 <p><a href="https://tio.run/##JcsxDsMgDIXhnVN4DChDm0gdkJqLVBmiBlogsZFjhp6e0mZ7n/S//JE34VirZ9ohiGMh2g4IeyYWozwxFAgImWktT@nMgxd8ue6mZzNqqyD0sU/30oaHC5L84gLtFqZhwRXiNDTEE@mPdKIF9qrAbYezmQNKV3StXw" rel="nofollow noreferrer" title="Python 3 – Try It Online">Try it online!</a></p>
 <p>-5 thanks to <a href="https://codegolf.stackexchange.com/users/17360/qwr">qwr</a></p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://github.com/dloscutoff/Esolangs/tree/master/Regenerate" rel="nofollow noreferrer">Regenerate</a> <code>-a</code>, <s>73</s> 64 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://github.com/dloscutoff/Esolangs/tree/master/Regenerate" rel="nofollow noreferrer">Regenerate</a> <code>-a</code>, <s>73</s> 64 bytes</h1>
 <pre><code>[345]([12]0|0[012])|[12]([1-5]0|0[0-5])|0([012][0-5]|[345][012])</code></pre>
 <p><a href="https://staging.ato.pxeger.com/run?1=m72qKDU9NS-1KLEkdVm0km6iUuyCpaUlaboWNx2ijU1MYzWiDY1iDWoMog2AtGYNiAcU0jWFiAFpzRoDDbAkmFcD1gRRDDEHatwCKA0A" rel="nofollow noreferrer">Attempt This Online!</a></p>
 <p>Surprised nopony did this yet. Probably golfable!</p>
 <p>EDIT: -9 thanks to <a href="https://codegolf.stackexchange.com/users/65425/math-junkie">math junkie</a> for reminding me of the shorter output format. Now it's 1 byte per combination :P I still think it can be golfed further, possibly with a new approach :-)c</p>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, 71 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, 71 bytes</h1>
 <pre>for x in range(521):max(s:=&#39;%03d&#39;%x)&lt;&#39;6&#39;!=[&#39;0&#39;,&#39;3&#39;]&gt;sorted(s)==print(s)</pre>
 <p><a href="https://ato.pxeger.com/run?1=m72soLIkIz9vwYKlpSVpuhY33dPyixQqFDLzFIoS89JTNUyNDDWtchMrNIqtbNVVDYxT1FUrNG3UzdQVbaPVDdR11I3VY-2K84tKUlM0ijVtbQuKMvNKgCyIcVBTYaYDAA" rel="nofollow noreferrer">Attempt This Online!</a></p>
 <p>I took the <code>['0','3']&gt;sorted(s)</code> idea from ovs.</p>
 </div>
-<div id="pu4" class="pu"><h1>Batch, 271 bytes</h1>
+<div id="pu5" class="pu"><h1>Batch, 271 bytes</h1>
 <pre><code>@!! 2&gt;nul||cmd/q/v/c%0&amp;&amp;exit/b&amp;for /l %%i in (0,1,5)do @(for /l %%j in (0,1,5)do @(for /l %%k in (0,1,5)do @(set s=%%i%%j%%k&amp;set p=!s:0=!&amp;if !p:~!==~ set p=0
 if !p!. neq !s!. set/af=!p!/10&amp;set/al=!p!%%10&amp;if !f! lss !l! (if !f! leq 2 echo !s!)else if !l! leq 2 echo !s!)))
 </code></pre>
 </div>
-<div id="pu5" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 75 bytes</h1>
+<div id="pu6" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 75 bytes</h1>
 
 <pre class="lang-python prettyprint-override"><code>print([r for r in[(x//36,x//6%6,x%6)for x in range(216)]if[0,3]&gt;sorted(r)])
 </code></pre>
 <p><a href="https://tio.run/##K6gsycjPM/7/v6AoM69EI7pIIS2/SKFIITMvWqNCX9/YTAdImqkCKVUzTZBUBVBKoSgxLz1Vw8jQTDM2My3aQMc41q44v6gkNUWjSDNW8/9/AA" rel="nofollow noreferrer" title="Python 3 – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu6" class="pu"><h1><a href="https://github.com/isaacg1/pyth" rel="nofollow noreferrer">Pyth</a>, 12 bytes</h1>
+<div id="pu7" class="pu"><h1><a href="https://github.com/isaacg1/pyth" rel="nofollow noreferrer">Pyth</a>, 12 bytes</h1>
 <pre><code>f&gt;,Z3ST^U6 3
 </code></pre>
 <p><a href="https://tio.run/##K6gsyfj/P81OJ8o4OCQu1EzB@P9/AA" rel="nofollow noreferrer" title="Pyth – Try It Online">Try it online!</a></p>
@@ -95,7 +104,7 @@ f             Filter for elements T such that:
  &gt;,Z3ST       [0,3] &gt; sorted(T)
 </code></pre>
 </div>
-<div id="pu7" class="pu"><h1>Python 2, <s>82</s> 80 bytes</h1>
+<div id="pu8" class="pu"><h1>Python 2, <s>82</s> 80 bytes</h1>
 
 <pre class="lang-python prettyprint-override"><code>from itertools import*
 print[k for k in product(*[range(6)]*3)if[0,3]&gt;sorted(k)]
@@ -119,7 +128,7 @@ print[k for k in product(*[range(6)]*3)if[0,3]&gt;sorted(k)]
 <li><code>print^</code>: And print it as result</li>
 </ul>
 </div>
-<div id="pu8" class="pu"><h1><a href="https://v8.dev/" rel="nofollow noreferrer">JavaScript (V8)</a>, <s> 75 </s> 67 bytes</h1>
+<div id="pu9" class="pu"><h1><a href="https://v8.dev/" rel="nofollow noreferrer">JavaScript (V8)</a>, <s> 75 </s> 67 bytes</h1>
 <p><em>Saved 8 bytes thanks to <a href="https://codegolf.stackexchange.com/users/44718/tsh">@tsh</a></em></p>
 <p>Prints one comma-separated triplet per line.</p>
 
@@ -127,7 +136,7 @@ print[k for k in product(*[range(6)]*3)if[0,3]&gt;sorted(k)]
 </code></pre>
 <p><a href="https://tio.run/##y0osSyxOLsosKNEts/j/Py2/SCPT1sjQzDpTV9daM1pPTy/RNjpT39hM1azGQCdTH0qrmsXG6hXnF5VoaNqoG@gYq6upFRRl5pVoJGr@/w8A" rel="nofollow noreferrer" title="JavaScript (V8) – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu9" class="pu"><h1><a href="https://codeberg.org/ngn/k" rel="nofollow noreferrer">K (ngn/k)</a>, <s>20</s> 18 bytes</h1>
+<div id="pu10" class="pu"><h1><a href="https://codeberg.org/ngn/k" rel="nofollow noreferrer">K (ngn/k)</a>, <s>20</s> 18 bytes</h1>
 <pre><code>?,/+'!'1|3*&lt;'+!3#3
 </code></pre>
 <p><a href="https://ngn.codeberg.page/k#eJyz19HXVldUN6wx1rJR11Y0Vjbm4tJXcE0syslMLVJILClJzS0oKbYCitlDVJopGCsYOsDU6itUa+kbAoXM7LQrHNRt1CtqlUEyZkAZDbhUhYNNRa26JlwGaFR1hYO+FdSUWiAFNhYipQHlaTrEWMHVAABhOCP+" rel="nofollow noreferrer">Try it online!</a></p>
@@ -137,20 +146,20 @@ print[k for k in product(*[range(6)]*3)if[0,3]&gt;sorted(k)]
 <code>+'!'</code> For each permutation, generate all triples where the each entry is a non-negative integer less than the number in the permutation at the same index.<br />
 <code>?,/</code> Flatten into a matrix with three columns and take the unique rows.</p>
 </div>
-<div id="pu10" class="pu"><h1><a href="https://www.rust-lang.org" rel="nofollow noreferrer">Rust</a>, 106 bytes</h1>
+<div id="pu11" class="pu"><h1><a href="https://www.rust-lang.org" rel="nofollow noreferrer">Rust</a>, 106 bytes</h1>
 <pre class="lang-rs prettyprint-override"><code>for i in 0..6{for j in 0..6{for k in 0..6{let mut t=[i,j,k];t.sort();if t&lt;[0,3,6]{print!(&quot;{i}{j}{k}
 &quot;)}}}}
 </code></pre>
 <p>Actually using nested loops is barely shorter than my attempt using itertoools.</p>
 <p><a href="https://ato.pxeger.com/run?1=m72kqLS4ZMHqtDyF3MTMPA1NheqlpSVpuhY3s9LyixQyFTLzFAz09MyqQbwsFF42nJeTWqKQW1qiUGIbnamTpZMda12iV5xfVKKhaZ2ZplBiE22gY6xjFltdUJSZV6KooVSdWVudVVudXculpFkLBBAbF0LpBQsgNAA" rel="nofollow noreferrer">Attempt This Online!</a></p>
 </div>
-<div id="pu11" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a>, 62 bytes</h1>
+<div id="pu12" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a>, 62 bytes</h1>
 
 <pre class="lang-ruby prettyprint-override"><code>p (z=*0..5).product(z,z).select{|x|x.min&lt;1&amp;&amp;(x-[3,4,5])[1]}|[]
 </code></pre>
 <p><a href="https://tio.run/##KypNqvz/v0BBo8pWy0BPz1RTr6AoP6U0uUSjSqdKU684NSc1uaS6pqKmQi83M8/GUE1No0I32ljHRMc0VjPaMLa2Jjr2/38A" rel="nofollow noreferrer" title="Ruby – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu12" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 26 bytes</h1>
+<div id="pu13" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 26 bytes</h1>
 <pre><code>ΦＥφ﹪%03dι∧№ι0∧›6⌈ι›²ΣＥι‹2λ
 </code></pre>
 <p><a href="https://tio.run/##NYzBCsIwEER/JSwIG1ghVvDiSQS9GBD8gqUJuJA2kjbi38et1DnOvDf9k0ufObV2LzLOeJE0x4KeX7hzzpHxOdSUETZuH4CMWEvmNAY856q4kAEHa3UtkRcZDgp6/shQB/wJ/6Uj89BueVfzFqcJoVM42TXH1tr2nb4" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Explanation:</p>
@@ -183,7 +192,7 @@ print[k for k in product(*[range(6)]*3)if[0,3]&gt;sorted(k)]
 </code></pre>
 <p><a href="https://tio.run/##NY3RCsIwDEV/pQSEFDqoE3zxSQQFWUHwC8paMNC1o1tlf19TmHkJnHtPMn5sHpMNtb4yxRXvFFaf0dgZj1prJZ6JIprkSkgIB31yoARJJaADyesaHd5SYZOYadjRI3vb7sCZ68ZuNJUJqQn/pFfizaw9YnPwy4LQcznIfS611u4bfg" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code.</p>
 </div>
-<div id="pu13" class="pu"><h1><a href="https://github.com/m-ender/retina/wiki/The-Language/a950ad7d925ec9316e3e2fb2cf5d49fd15d23e3d" rel="nofollow noreferrer">Retina 0.8.2</a>, 50 bytes</h1>
+<div id="pu14" class="pu"><h1><a href="https://github.com/m-ender/retina/wiki/The-Language/a950ad7d925ec9316e3e2fb2cf5d49fd15d23e3d" rel="nofollow noreferrer">Retina 0.8.2</a>, 50 bytes</h1>
 <pre><code>
 520$*¶
 
@@ -209,7 +218,7 @@ $1
 </code></pre>
 <p>Discard those with more than one digit greater than <code>2</code> or with a digit greater than <code>5</code>.</p>
 </div>
-<div id="pu14" class="pu"><h1><a href="https://factorcode.org/" rel="nofollow noreferrer">Factor</a> + <code>math.combinatorics</code>, <s>59</s> 58 bytes</h1>
+<div id="pu15" class="pu"><h1><a href="https://factorcode.org/" rel="nofollow noreferrer">Factor</a> + <code>math.combinatorics</code>, <s>59</s> 58 bytes</h1>
 <pre class="lang-factor prettyprint-override"><code>6 iota 3 selections [ natural-sort &quot;\0&quot;before? ] filter .
 </code></pre>
 <p><a href="https://tio.run/##JYy7DsIwDEUHfuSqOxUSEgMMjIiFBTEBgxscsJTGxXEHvj4EMZ9HpOBq9XI@ng5bFH7PnAMXjOSvPug4SKYmSCgoai75@UdqDzZMxu6fySQ7dnUDUSes2yZxcNFccEXrZ6O0/OXobqtFN3BU4z3uiJK8bfpavw" rel="nofollow noreferrer" title="Factor – Try It Online">Try it online!</a></p>
@@ -227,7 +236,7 @@ $1
 </li>
 </ul>
 </div>
-<div id="pu15" class="pu"><h1><a href="https://github.com/barbuz/Husk" rel="nofollow noreferrer">Husk</a>, 10 bytes</h1>
+<div id="pu16" class="pu"><h1><a href="https://github.com/barbuz/Husk" rel="nofollow noreferrer">Husk</a>, 10 bytes</h1>
 <pre><code>uΣmPΠmŀ∫ḣ3
 </code></pre>
 <p><a href="https://tio.run/##yygtzv7/v/Tc4tyAcwtyjzY86lj9cMdi4///AQ" rel="nofollow noreferrer" title="Husk – Try It Online">Try it online!</a></p>
@@ -240,7 +249,7 @@ $1
 u           -- get the unique ones
 </code></pre>
 </div>
-<div id="pu16" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, <s>13</s> 11 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu17" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, <s>13</s> 11 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>5Ý3ãʒ{₆1š‹P
 </code></pre>
 <p>-2 bytes thanks to a tip of <em>@ovs</em> using <code>136</code>.</p>
