--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 <pre>
 " ====================================================================
 "                                                                      
-"   /golfscore                                      20240905T180934Z
+"   /golfscore                                      20240905T200927Z
 "                                                                      
 " ====================================================================
 </pre></td></tr>
 <tr> <td>
 <pre>
+<a href="q/39752.html">Sing Happy Birthday to your favourite programmin: 0039752</a>
 <a href="q/274092.html">Calculate sum of self-exponentation             : 0274092</a>
 <a href="q/105998.html">Recreate the ASCII-table as an ASCII-table      : 0105998</a>
 <a href="q/275210.html">Parse Minecrafts VarInt                         : 0275210</a>
