--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 <pre>
 " ====================================================================
 "                                                                      
-"   /golfscore                                      20240906T124436Z
+"   /golfscore                                      20240906T124643Z
 "                                                                      
 " ====================================================================
 </pre></td></tr>
 <tr> <td>
 <pre>
+<a href="q/268852.html">Bloons TD 6 Ordered Upgrade Paths               : 0268852</a>
 <a href="q/177668.html">Approximate the proportion of integers with neig: 0177668</a>
 <a href="q/275350.html">Sylvester primes                                : 0275350</a>
 <a href="q/39752.html">Sing Happy Birthday to your favourite programmin: 0039752</a>
