--- a/q/268852.html
+++ b/q/268852.html
@@ -26,15 +26,24 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>119</td><td>Python 3</td><td>240104T191423Z</td><td><a href="https://codegolf.stackexchange.com/questions/268852/bloons-td-6-ordered-upgrade-paths/268995#268995">Jonathan</a></td></tr>
-<tr d-ix="1"><td>234</td><td>Python 3.8 prerelease</td><td>240104T140547Z</td><td><a href="https://codegolf.stackexchange.com/questions/268852/bloons-td-6-ordered-upgrade-paths/268989#268989">G&#225;b</a></td></tr>
-<tr d-ix="2"><td>018</td><td>Jelly</td><td>231230T004016Z</td><td><a href="https://codegolf.stackexchange.com/questions/268852/bloons-td-6-ordered-upgrade-paths/268857#268857">Nick Ken</a></td></tr>
-<tr d-ix="3"><td>114</td><td>R</td><td>231230T232954Z</td><td><a href="https://codegolf.stackexchange.com/questions/268852/bloons-td-6-ordered-upgrade-paths/268877#268877">Nick Ken</a></td></tr>
-<tr d-ix="4"><td>154</td><td>Haskell</td><td>231230T105858Z</td><td><a href="https://codegolf.stackexchange.com/questions/268852/bloons-td-6-ordered-upgrade-paths/268872#268872">matteo_c</a></td></tr>
-<tr d-ix="5"><td>057</td><td>Charcoal</td><td>231230T014256Z</td><td><a href="https://codegolf.stackexchange.com/questions/268852/bloons-td-6-ordered-upgrade-paths/268861#268861">Neil</a></td></tr>
-<tr d-ix="6"><td>097</td><td>Retina 0.8.2</td><td>231230T012544Z</td><td><a href="https://codegolf.stackexchange.com/questions/268852/bloons-td-6-ordered-upgrade-paths/268859#268859">Neil</a></td></tr>
+<tr d-ix="0"><td>nan</td><td>Vyxal M</td><td>240906T124643Z</td><td><a href="https://codegolf.stackexchange.com/questions/268852/bloons-td-6-ordered-upgrade-paths/275389#275389">pacman25</a></td></tr>
+<tr d-ix="1"><td>119</td><td>Python 3</td><td>240104T191423Z</td><td><a href="https://codegolf.stackexchange.com/questions/268852/bloons-td-6-ordered-upgrade-paths/268995#268995">Jonathan</a></td></tr>
+<tr d-ix="2"><td>234</td><td>Python 3.8 prerelease</td><td>240104T140547Z</td><td><a href="https://codegolf.stackexchange.com/questions/268852/bloons-td-6-ordered-upgrade-paths/268989#268989">G&#225;b</a></td></tr>
+<tr d-ix="3"><td>018</td><td>Jelly</td><td>231230T004016Z</td><td><a href="https://codegolf.stackexchange.com/questions/268852/bloons-td-6-ordered-upgrade-paths/268857#268857">Nick Ken</a></td></tr>
+<tr d-ix="4"><td>114</td><td>R</td><td>231230T232954Z</td><td><a href="https://codegolf.stackexchange.com/questions/268852/bloons-td-6-ordered-upgrade-paths/268877#268877">Nick Ken</a></td></tr>
+<tr d-ix="5"><td>154</td><td>Haskell</td><td>231230T105858Z</td><td><a href="https://codegolf.stackexchange.com/questions/268852/bloons-td-6-ordered-upgrade-paths/268872#268872">matteo_c</a></td></tr>
+<tr d-ix="6"><td>057</td><td>Charcoal</td><td>231230T014256Z</td><td><a href="https://codegolf.stackexchange.com/questions/268852/bloons-td-6-ordered-upgrade-paths/268861#268861">Neil</a></td></tr>
+<tr d-ix="7"><td>097</td><td>Retina 0.8.2</td><td>231230T012544Z</td><td><a href="https://codegolf.stackexchange.com/questions/268852/bloons-td-6-ordered-upgrade-paths/268859#268859">Neil</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 119 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a> <code>M</code>, 143 <a href="https://github.com/Vyxal/Vyncode/blob/main/README.md" rel="nofollow noreferrer">bits<sup>v2</a></sup>, 17.875 bytes</h1>
+<pre><code>502fʀΠvṖÞfUµ₍G≬GḟN;Ṙ
+</code></pre>
+<p><a href="https://vyxal.pythonanywhere.com/?v=2&amp;c=1#WyJQTT0iLCIiLCI1MDJmyoDOoHbhuZbDnmZVwrXigo1H4omsR+G4n0474bmYIiwiIiwiIl0=" rel="nofollow noreferrer">Try it Online!</a></p>
+<p>Bitstring:</p>
+<pre><code>01001100010111011101100111110101010001010111110111001010000001010001111111000110110110011111110101010001101001110000010110110000011010100111111
+</code></pre>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 119 bytes</h1>
 
 <pre class="lang-python prettyprint-override"><code>t=(0,1,2)
 print(*{(*(x*(i==j)+y*(i==k)for i in t),):0for x in(5,4,3,2,1,0)for j in t for y in(2,1,0)for k in t if j-k})
@@ -58,14 +67,14 @@ print(*{(*(x*(i==j)+y*(i==k)for i in t),):0for x in(5,4,3,2,1,0)for j in t for y
 </code></pre>
 <p><sup>Perhaps the <code>print(*{...})</code> could be <code>print({...})</code> it will then print the <code>dict</code> representation, which is in order of its keys (the upgrade path triples), but will also show the dummy values <code>: 0</code> along with each key.</sup></p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3.8 (pre-release)</a>, 234 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3.8 (pre-release)</a>, 234 bytes</h1>
 
 <pre class="lang-python prettyprint-override"><code>from itertools import*
 s,r=sorted,range;[print('-'.join(map(str,p)))for p in s(set(chain.from_iterable(permutations(list(x)+[0])for x in s(product(r(6),r(3))))),key=lambda x:(max(x),-x.index(max(x)),sum(x),x,-x.index(s(x)[1])))[::-1]]
 </code></pre>
 <p><a href="https://tio.run/##RY3RasMwDEXf9xV@q7w5oaVQRka/JITiNm7rLbaEpID79anTDaYn3SvOET30jnn/SbwsV8ZkogZWxElMTISs72/i@Ch1C6Njn2/hqyeOWWHTbNpvjBmSJxBlR9baK7IhE7MRkKBwufuY21V8WsX@PAWgwGlWrxGzwBRFodiPfju82PLLEuM4XxQYDtYx7O067ic8jpNP59Gb0tW3pZKuKW3MYyh/2TqZ09qX/4vU3O@Gqui7rtkNw7I8AQ" rel="nofollow noreferrer" title="Python 3.8 (pre-release) – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 18 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 18 bytes</h1>
 <pre><code>6p3’Ż€Œ!€ẎQMNṭṀƲÞṚ
 </code></pre>
 <ul>
@@ -86,7 +95,7 @@ s,r=sorted,range;[print('-'.join(map(str,p)))for p in s(set(chain.from_iterable(
                  Ṛ | Reverse
 </code></pre>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, 114 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, 114 bytes</h1>
 <pre class="lang-r prettyprint-override"><code>r=rowSums
 a=apply
 (b=(x=expand.grid(0:5,0:5,0:5))[r(x&gt;2)&lt;2&amp;r(x&gt;0)&lt;3,])[order(-a(b,1,max),a(b,1,which.max),-r(b)),]
@@ -95,14 +104,14 @@ a=apply
 <p>A full program that prints a data frame with the relevant triples in rows. It also prints some redundant row and column names - hopefully that’s permissible.</p>
 <p>The footer verifies that the data frame is correct when compared to the canonical answer.</p>
 </div>
-<div id="pu4" class="pu"><h1><a href="https://www.haskell.org/" rel="nofollow noreferrer">Haskell</a>, 154 bytes</h1>
+<div id="pu5" class="pu"><h1><a href="https://www.haskell.org/" rel="nofollow noreferrer">Haskell</a>, 154 bytes</h1>
 
 <pre class="lang-hs prettyprint-override"><code>import Data.List
 x=unlines[intersperse '-'s|s&lt;-reverse$sortOn(\x-&gt;(maximum$zip x[1,0..],sort x))$mapM id$['0'..'5']&lt;$[1..3],elem '0's,sum[1|x&lt;-s,x&gt;'2']&lt;2]
 </code></pre>
 <p><a href="https://tio.run/##Vc7BaoQwFAXQvV8RBsEpGMlLMrtxVl229AOsC6FCQ40jRkso8@82w6g3sxBvrnnP8924n7brlsXY4TpO7LWZmuLNuCnx5dx3pm9dZfqpHd0QnpZlPHM3d@Zj@3s/py4MffTHT88vR9t4Y2eb/pmB@YpyURR1fr/A/MtLapvhnZmvtMpEVhTZKavPaUVFoeq87VrLQu1yN9uKbv7MXe4vmQx3ZL3YxvSsZMMYICxlnpUlu87TME9J8niHryuWVQljhxOXXBzyRxRcbpHilhDXVvLTFkWI6xg9t4S4j4XD1sotUtwS4t5qIDWQGkgNpI6RGhwN5FNLiBFSA6mB1EBqINeogFRAKiAVkCpGKnAUkE8tIUZIBaQCUgGpgFTbmIw3yC1S3BKiwC92mYxbQhQwSBgkDPsGiu8SosAYIQpsIERxqJPlHw" rel="nofollow noreferrer" title="Haskell – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu5" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 57 bytes</h1>
+<div id="pu6" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 57 bytes</h1>
 <pre><code>≔ＥΦＥφ﹪%03dι∧№ι0∧›6⌈ι›²ΣＥι‹2λ⟦⌈ι±⌕ι⌈ι⁻ΣιΣ⌈ιι⟧θＷ⁻θυ⊞υ⌈ιＥυ⊟ι
 </code></pre>
 <p><a href="https://tio.run/##VY@xCsIwEIZ3n@IICBeIEBVcOomgi5WCozgEG@xB2mhj1LeP11ZRM4Rw//99XE6VaU/euJSWIdC5wdxccE3uZtv@OdVaK8h9GZ1HMdbzUiggKRUsmxJXPjY3JAVCi/do01rTwWLBxdw8qY419sAnmSnY86yzM7m1IaCYcdnJ4Sg4fDkFO3tmjHdiOf0pOcypiQH37@qg/c3pyNdVZqNHRc4CDv2rgiglFDFUGP@U2ahoib/ULcdJ4S@9KEspTe7uBQ" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Explanation: Based on my answer to the linked question.</p>
@@ -116,7 +125,7 @@ x=unlines[intersperse '-'s|s&lt;-reverse$sortOn(\x-&gt;(maximum$zip x[1,0..],sor
 </code></pre>
 <p>Output just the triples. (This could be <code>Ｅυ⪫⊟ι-</code> to prettify the output at a cost of 2 bytes.)</p>
 </div>
-<div id="pu6" class="pu"><h1><a href="https://github.com/m-ender/retina/wiki/The-Language/a950ad7d925ec9316e3e2fb2cf5d49fd15d23e3d" rel="nofollow noreferrer">Retina 0.8.2</a>, 97 bytes</h1>
+<div id="pu7" class="pu"><h1><a href="https://github.com/m-ender/retina/wiki/The-Language/a950ad7d925ec9316e3e2fb2cf5d49fd15d23e3d" rel="nofollow noreferrer">Retina 0.8.2</a>, 97 bytes</h1>
 <pre><code>
 520$*¶
 
